# PIVOT

./: .gitignore  CMakeLists.txt  LICENSE  README.md
exp_analysis/: ExperimentAnalysis.ipynb
exp_analysis/experiment_data/: cpp_diff_cases.csv  cpp_diff_tau.csv  cpp_num_variables.csv  cppresult-ssim.csv  cppresult-time-memory.csv  duck-interaction.csv  duck_num_variables.csv  duckresult.csv  interaction-1b5v.csv  interactive_nyc_0.csv  interactive_nyc_005.csv  om3result.csv
pivot-client/: .eslintrc.js  package-lock.json  package.json  response.json
pivot-client/public/: index.html
pivot-client/src/: App.vue  main.ts
pivot-client/src/api/: build_tree.ts  load_data.ts
pivot-client/src/application/: all-interaction.ts  draw-init-data.ts  draw-svg-panel.ts  haarinteraction.ts  line-interaction.ts  m4interaction.ts  multi-interaction.ts  progressive-render.ts  view-change.ts
pivot-client/src/batch/: m5batch.ts  m5batchnew.ts
pivot-client/src/components/: DeviceControlPanel.vue  DisplayContentPanel.vue  GlobalHeader.vue  LeftSideDataControlPanel.vue
pivot-client/src/constant/: index.ts
pivot-client/src/global_state/: state.ts
pivot-client/src/helper/: compute_density.ts  distortion.ts  format-data.ts  haar-tree.ts  index.ts  loader.ts  series-density.ts  tend-query-tree.ts  tree.ts  util.ts  wavlet-decoder.ts
pivot-client/src/indexdb/: index.ts
pivot-client/src/model/: haar-data-manager.ts  haar-index-obj.ts  level-data-manager.ts  level-index-obj.ts  level-index-obj1.ts  non-uniform-col-obj.ts  shape-segment-obj.ts  uniform-gap-obj.ts
pivot-client/src/store/: actions.ts  index.ts  mutations.ts
pivot-client/src/views/: Home.vue
scripts/: applications.js  plans.csv
src/: Experiments.h  MemoryManager.cpp  MemoryManager.h  Om3Encoder.cpp  Om3Encoder.h  om3_encode.cpp  server.cpp  utils.cpp  utils.h
